theme color changes

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,9 +6,10 @@ website:
   title: "Regina Lisinker"
   navbar:
     left:
-      - href: index.qmd
-        text: Home
-      - about.qmd
+      # - href: index.qmd
+      #   text: Home
+      - href: about.qmd
+        text: About
 
 format:
   html:
