pages content + theme

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,7 +15,7 @@ format:
   html:
     page-layout: full
     theme: 
-      - cosmo
+      # - cosmo
       - "assets/theme.scss"
     header-includes: |
       <link rel="preconnect" href="https://fonts.googleapis.com">
